force-app/main/default/objects/leaseworks__Counterparty__c/leaseworks__Counterparty__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>Z_Unused_2206 Lessor</label>
    <nameField>
        <label>Z_Unused_2206 Lessor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_2206 Lessors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>