force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Account_Name__c</fullName>
    <label>Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>