force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Alias__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Alias__c</fullName>
    <label>Alias</label>
    <type>TextArea</type>
</CustomField>