force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>