force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Cash_flow_from_operations__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cash_flow_from_operations__c</fullName>
    <label>Cash Flow From Operations ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>