force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Company_Logo__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Company_Logo__c</fullName>
    <formula>IMAGE( leaseworks__Company_Logo_URL__c , &#39;Image not available&#39;, 50,80)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Logo</label>
    <type>Text</type>
</CustomField>