force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Company_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Company_Logo_URL__c</fullName>
    <label>Company Logo URL</label>
    <type>Url</type>
</CustomField>