force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Credit_Rating_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Rating_Type__c</fullName>
    <label>Credit Rating Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>