force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Date_Of_Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Of_Last_Interaction__c</fullName>
    <inlineHelpText>Automatically copied from the latest Interaction Log</inlineHelpText>
    <label>Date Of Last Interaction</label>
    <type>Date</type>
</CustomField>