force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Days_Since_Contact__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Days_Since_Contact__c</fullName>
    <formula>TODAY()-leaseworks__Date_Of_Last_Interaction__c</formula>
    <inlineHelpText>Automatically calculated from the latest Interaction Log</inlineHelpText>
    <label>Days Since Last Interaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>