force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__IBAN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IBAN__c</fullName>
    <description>International Bank Account Number</description>
    <inlineHelpText>International Bank Account Number</inlineHelpText>
    <label>IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>