force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__ICAO_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ICAO_Code__c</fullName>
    <label>ICAO Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>