force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Interest_Coverage_Ratio__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Coverage_Ratio__c</fullName>
    <inlineHelpText>Operating income divided by interest expenses. Basically indicates how much of income the airline has to cover its interest payment obligation</inlineHelpText>
    <label>Interest Coverage Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>