force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Main_Contact__c</fullName>
    <label>Main Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>