force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Marketing_Representative_User__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Marketing_Representative_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lessors</relationshipName>
    <type>Lookup</type>
</CustomField>