force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>