force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Region_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Region_New__c</fullName>
    <label>Region [Deprecated]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>