force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Revenue_Check__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Revenue_Check__c</fullName>
    <label>Revenue Check</label>
    <type>TextArea</type>
</CustomField>