force-app/main/default/objects/leaseworks__Counterparty__c/fields/leaseworks__Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Swift_Code__c</fullName>
    <label>Swift Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>