force-app/main/default/objects/leaseworks__Counterparty__c/validationRules/leaseworks__LessorNameUnique.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__LessorNameUnique</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED( Name )
),
NOT(
ISBLANK (
VLOOKUP( $ObjectType.leaseworks__Counterparty__c.Fields.Name, $ObjectType.leaseworks__Counterparty__c.Fields.Name, Name )
)
)
)</errorConditionFormula>
    <errorMessage>Lessor name already exists.</errorMessage>
</ValidationRule>